having z-index issues with the diamond::after, its container was overlapping the buttons. Changed the css created diamond to a square and rotated it 45 degrees to create a diamond.

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -157,7 +157,16 @@
     margin: auto;
 }
 
-#diamond {
+ 
+#diamond{
+    width: 65%;
+    height: 65%;
+    color: darkgreen;
+    border: 2px solid yellow;
+    transform: rotate(45deg);
+    margin: 42px;
+}
+/* #diamond {
     width: 0;
     height: 0;
     border: 115px solid transparent;
@@ -197,7 +206,7 @@
     border-top-color: darkgreen;
     margin: auto;
     z-index: 1;
-  }
+  } */
 
 #actions-div{
     display: flex;
